Fix static files

--- a/treemenus/templates/admin/treemenus/menu/change_form.html
+++ b/treemenus/templates/admin/treemenus/menu/change_form.html
@@ -1,6 +1,5 @@
 {% extends "admin/change_form.html" %}
 {% load i18n %}
-{% load tree_menu_tags %}
 {% load static %}
 
 
@@ -10,7 +9,7 @@
       <h2>{% trans "Menu Items" %}</h2>
 
       <div class="form-row" >
-        <img src="{% static "img/icon_addlink.gif" %}" width="10" height="10"/>
+        <img src="{% static "treemenus/icon_addlink.gif" %}" width="10" height="10"/>
         <a href="../items/add/">{% trans "Add an item" %}</a>
       </div>
 
@@ -55,7 +54,7 @@
                 {% ifnotequal menu_item.rank menu_item.siblings.count %}
                   <td width="20" align="center">
                     <a href="../items/{{ menu_item.pk }}/move_down/">
-                      <img src="{% static "img/arrow-down.gif" %}" border="0" alt="{% trans 'Down' %}"/>
+                      <img src="{% static "treemenus/arrow-down.gif" %}" border="0" alt="{% trans 'Down' %}"/>
                     </a>
                   </td>
                 {% else %}
@@ -65,7 +64,7 @@
                 {% ifnotequal menu_item.rank 0 %}
                   <td width="20" align="center">
                     <a href="../items/{{ menu_item.pk }}/move_up/">
-                      <img src="{% static "img/arrow-up.gif" %}" border="0" alt="{% trans 'Up' %}"/>
+                      <img src="{% static "treemenus/arrow-up.gif" %}" border="0" alt="{% trans 'Up' %}"/>
                     </a>
                   </td>
                 {% else %}
